--- a/TP/style.css
+++ b/TP/style.css
@@ -128,6 +128,7 @@ main {
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   margin-bottom: 2rem;
+  background-color: #000000;
 }
 
 /* Estilo para los paneles de gráficos */
